--- a/Gangwars_Client/Client/RegisterLogin/style.css
+++ b/Gangwars_Client/Client/RegisterLogin/style.css
@@ -9,24 +9,28 @@ body{
 .register_login_main{
     position: absolute; 
     left: 50%;
-    top: 15vw;
-    transform: translate(-50%,0);
+    top: 50%;
+    transform: translate(-50%,-50%);
     background-color: rgba(50,50,50,0.7);
     width: 20vw;
-    height: 10vw;
+    height: 12vw;
     border-radius: 0.3vw;
 }
 
 .register_login_header_background{
     position: absolute;
-    color: white;
+    color: rgb(0,150,200);
     left: 0%;
     width: 100%;
-    height: 2vw;
     background-color: rgb(50,50,50,0.7);
-    border-top-left-radius: 0.3vw;
-    border-top-right-radius: 0.3vw;
+    border-radius: 0.4vw;
+    border-top: solid 0.2vw rgba(0,150,200,0.7);
+    text-align: center;
+    padding: 0.5vw 0vw;
+    font-size: 1vw;
+    font-weight: bold;
 }
+/*
 .register_login_header{
     position: absolute;
     color: white;
@@ -34,74 +38,72 @@ body{
     transform: translate(-50%);
     width: 10vw;
     height: 2vw;
-}
+}*/
 
 /* Username eingabe Feld */
 .register_username {
-position: absolute;
-top: 30%;
-left: 52%;
-width: 15vw;
-height: 1.5vw;
-text-align: center;
-display: block;
-font-size: 0.6vw;
-line-height: 1.5;
-color: white;
-background-color: rgb(0, 0, 0,0.6);
-border: 0.5px solid rgba(125,0,0);
-border-radius: .25rem;
-transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-transform: translate(-50%);
+    position: absolute;
+    top: 30%;
+    left: 52%;
+    width: 15vw;
+    height: 1.5vw;
+    text-align: center;
+    display: block;
+    font-size: 0.6vw;
+    line-height: 1.5;
+    color: white;
+    background-color: rgb(0, 0, 0,0.6);
+    border: 2px solid rgba(0,150,200);
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transform: translate(-50%);
 }
 .register_username::-ms-expand {
-background-color: transparent;
-border: 0vw;
+    background-color: transparent;
+    border: 0vw;
 }
 .register_username:focus {
-color: white;
-background-color: rgba(40, 40, 40, 0.9);
-border-color: rgb(255, 0, 0);
-outline: 0vw;
-box-shadow: 0vw 0vw 0vw .2rem rgba(255, 0, 0, 0.1);
+    color: white;
+    background-color: rgba(40,40,40,0.9);
+    border-color: rgb(0,200,255);
+    outline: 0vw;
+    box-shadow: 0vw 0vw 0vw .2rem rgba(255,0,0,0.1);
 }
-
 
 /* Passwort eingabe Feld */
 .register_password {
-position: absolute;
-top: 55%;
-left: 52%;
-width: 15vw;
-height: 1.5vw;
-text-align: center;
-display: block;
-font-size: 0.6vw;
-line-height: 1.5;
-color: white;
-background-color: rgb(0, 0, 0,0.6);
-border: 0.5px solid rgba(125,0,0);
-border-radius: .25rem;
-transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-transform: translate(-50%);
+    position: absolute;
+    top: 50%;
+    left: 52%;
+    width: 15vw;
+    height: 1.5vw;
+    text-align: center;
+    display: block;
+    font-size: 0.6vw;
+    line-height: 1.5;
+    color: white;
+    background-color: rgb(0, 0, 0,0.6);
+    border: 2px solid rgba(0,150,200);
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transform: translate(-50%);
 }
 .register_password::-ms-expand {
-background-color: transparent;
-border: 0vw;
+    background-color: transparent;
+    border: 0vw;
 }
 .register_password:focus {
-color: white;
-background-color: rgba(40, 40, 40, 0.9);
-border-color: rgb(255, 0, 0);
-outline: 0vw;
-box-shadow: 0vw 0vw 0vw .2rem rgba(255, 0, 0, 0.1);
+    color: white;
+    background-color: rgba(40,40,40,0.9);
+    border-color: rgb(0,200,255);
+    outline: 0vw;
+    box-shadow: 0vw 0vw 0vw .2rem rgba(255,0,0,0.1);
 }
-
 
 .button_login{
     position: absolute;
     text-align: center;
-    top:75%;
+    top: 73%;
     left: 14%;
     width: 5vw;
     padding: 0.5vw 0.3vw;
@@ -110,15 +112,16 @@ box-shadow: 0vw 0vw 0vw .2rem rgba(255, 0, 0, 0.1);
     color: white;
     font-size: 0.8vw;
     font-family: arial;
+    font-weight: bold;
 }
 .button_login:hover{
-    background-color: rgba(125,0,0,1);
+    background-color: rgba(0,150,200,1);
     cursor: pointer;
 }
 .button_register{
     position: absolute;
     text-align: center;
-    top:75%;
+    top: 73%;
     left: 62%;
     width: 5vw;
     padding: 0.5vw 0.3vw;
@@ -127,8 +130,9 @@ box-shadow: 0vw 0vw 0vw .2rem rgba(255, 0, 0, 0.1);
     color: white;
     font-size: 0.8vw;
     font-family: arial;
+    font-weight: bold;
 }
 .button_register:hover{
-    background-color: rgba(125,0,0,1);
+    background-color: rgba(0,150,200,1);
     cursor: pointer;
 }
